删除.idea，增加文件打开时的编码

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,10 @@ wikidataSpider/TrainDataBaseOnWiki/train_data*.txt
 relationExtraction/data/*.txt
 demo/.idea/*
 .idea/*
+idea/
+.idea/workspace.xml
+.idea/libraries
+.idea/*.*
+.DS_Store
+*/.DS_Store
+*.pyc
